# inox2d

./: Cargo.toml
.claude/: AGENTS.md
docs/: mcp-server.md
examples/render-opengl/: Cargo.toml
examples/render-opengl/src/: app_frame.rs  main.rs
inox2d-mcp/: Cargo.toml
inox2d-mcp/src/: main.rs  renderer.rs  server.rs
inox2d-opengl/src/: lib.rs
inox2d/src/: puppet.rs
