[package]
name = "inox2d-mcp"
description = "MCP server for inox2d puppet operation and PNG rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
inox2d = { path = "../inox2d", version = "0.3.0" }
inox2d-opengl = { path = "../inox2d-opengl" }

rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"

glow = "0.14.1"
image = { version = "0.25.2", default-features = false, features = ["png"] }
glam = "0.29.0"

[target.'cfg(target_os = "macos")'.dependencies]
cgl = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
khronos-egl = { version = "6", features = ["dynamic"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
base64 = "0.22"
